[gd_scene load_steps=4 format=3 uid="uid://u6fby54vqn30"]

[ext_resource type="Texture2D" uid="uid://chakn4bb1c7ua" path="res://Sprites/Main Menu/main_menu_bg.png" id="1_gqhxw"]
[ext_resource type="Script" path="res://Scripts/Game Scenes/menu.gd" id="1_wqknm"]
[ext_resource type="Texture2D" uid="uid://ba8q1a20tcdjd" path="res://Sprites/Main Menu/main_menu_hand.png" id="2_7p2aw"]

[node name="Menu" type="Node2D"]
script = ExtResource("1_wqknm")

[node name="MainMenuBg" type="Sprite2D" parent="."]
position = Vector2(169, 201.5)
scale = Vector2(6.3, 6.3)
texture = ExtResource("1_gqhxw")

[node name="UserInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 336.0
offset_bottom = 400.0

[node name="Label" type="Label" parent="UserInterface"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -152.0
offset_top = -160.0
offset_right = 152.0
offset_bottom = -104.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 38
text = "Morphing Mazes"
horizontal_alignment = 1

[node name="Play" type="Button" parent="UserInterface"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.0
offset_top = -15.5
offset_right = 23.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Start"

[node name="Credits" type="Button" parent="UserInterface"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.5
offset_top = 24.5
offset_right = 31.5
offset_bottom = 55.5
grow_horizontal = 2
grow_vertical = 2
text = "Credits"

[node name="Instructions" type="Button" parent="UserInterface"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = 65.5
offset_right = 50.0
offset_bottom = 96.5
grow_horizontal = 2
grow_vertical = 2
text = "How to Play"

[node name="Quit" type="Button" parent="UserInterface"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.0
offset_top = 104.5
offset_right = 23.0
offset_bottom = 135.5
grow_horizontal = 2
grow_vertical = 2
text = "Quit"

[node name="MainMenuHand" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(170, 202)
scale = Vector2(6.3, 6.3)
texture = ExtResource("2_7p2aw")

[connection signal="pressed" from="UserInterface/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="UserInterface/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="UserInterface/Instructions" to="." method="_on_instructions_pressed"]
[connection signal="pressed" from="UserInterface/Quit" to="." method="_on_quit_pressed"]
